<resources>
    <string name="app_name">Calculator</string>
    <string name="value_a">Value a</string>
    <string name="value_b">Value b</string>
    <string name="hint">Select an Operation</string>
    <string name="btn_calculate">Calculate</string>
    <string name="btn_back">Return</string>
    <string name="Result">Result</string>
    <string name="version">1.4.1</string>
    <string name="logo">Calculator logo</string>
</resources>